# Automatizacion_RSI_PCI

./: .flake8  .gitignore  README.md  core.py  io.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: 0_test (3.10).txt  1_test (3.8).txt  2_test (3.9).txt  3_test (3.11).txt  python-ci.yml
.github/workflows/test (3.10)/: 14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Set up Python.txt  4_Install dependencies.txt
.github/workflows/test (3.11)/: 14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Set up Python.txt  4_Install dependencies.txt
.github/workflows/test (3.8)/: 14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Set up Python.txt  4_Install dependencies.txt
.github/workflows/test (3.9)/: 14_Post Checkout code.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Set up Python.txt  4_Install dependencies.txt
pci_rsi_sugeridor/: core.py  io.py
pci_rsi_sugeridor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_normalizacion.py  test_utils.py
