[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi-proyecto"
version = "0.1.0"
description = "Descripción de tu proyecto"
authors = [{ name="Tu Nombre", email="tu@correo.com" }]
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "flake8",
  "mypy",
  "pytest",
  "pytest-cov",
  "codecov"
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = ["E501", "F401"]

[tool.mypy]
python_version = 3.8
strict = true
